--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -385,7 +385,7 @@
         <!-- footer -->
         <!-- ============================================================== -->
         <footer class="footer">
-            © 2024 pidev STOUFA
+            © 2024 pidev 
         </footer>
         <!-- ============================================================== -->
         <!-- End footer -->
