--- a/templates/users/home.html.twig
+++ b/templates/users/home.html.twig
@@ -140,12 +140,16 @@ HOME
                         </div>
                     </div>
                 </div>
-                 
-   
+                 <a style="margin-left: 25px;"href="{{ path('app_user_stat') }}">Génerer statistiques</a>
+                 /
+                    <a href="{{ path('generate_pdf') }}">Télécharger le PDF</a>
             </div>
+         
             <!-- ============================================================== -->
             <!-- End Container fluid  -->
             <!-- ============================================================== -->
+
+     
         </div>
 
                 
