--- a/templates/users/Forgotpassword.html.twig
+++ b/templates/users/Forgotpassword.html.twig
@@ -1,18 +1,41 @@
-{# templates/users/forgot_password.html.twig #}
+{% extends 'front.html.twig' %}
 
-{% extends 'base.html.twig' %}
+{% block title %}
+    Forgot Password
+{% endblock %}
 
-{% block title %}Réinitialisation de mot de passe{% endblock %}
-
-{% block body %}
-    <h1>Réinitialisation de mot de passe</h1>
-    {% if form_errors(form) %}
-        <div class="alert alert-danger">
-            {{ form_errors(form) }}
+{% block ktiba2 %}
+    <div class="wrapper">
+        <div class="form-box">
+            <div class="login-container" id="login">
+                <div class="top">
+                    <span>Don't have an account? <a href="{{ path ('userfront')}}" onclick="register()">Sign Up</a></span>
+                    <header>Forgot Password</header>
+                </div>
+                {% if error %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
+                {% endif %}
+                {{ form_start(forgotPasswordForm) }}
+                <div class="input-box">
+                    {{ form_row(forgotPasswordForm.email, {'attr': {'class': 'input-field', 'placeholder': 'Email'}}) }}
+                    <i class="bx bx-user"></i>
+                </div>
+                <div class="input-box">
+                    {{ form_row(forgotPasswordForm.submit, {'attr': {'class': 'submit', 'value': 'Send'}}) }}
+                </div>
+                {{ form_end(forgotPasswordForm) }}
+                <div class="two-col">
+                    <div class="one">
+                        <input type="checkbox" id="login-check">
+                        <label for="login-check"> Remember Me</label>
+                    </div>
+                    <div class="two">
+                        <label><a href="{{ path('login') }}">Back to Login</a></label>
+                    </div>
+                </div>
+            </div>
         </div>
-    {% endif %}
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button type="submit" class="btn btn-primary">Envoyer</button>
-    {{ form_end(form) }}
+    </div>
 {% endblock %}
