--- a/templates/users/userfront2.html.twig
+++ b/templates/users/userfront2.html.twig
@@ -10,6 +10,7 @@ TOUNSI LL TOUNSI
         <div class="login-container" id="login">
             <div class="top">
                 <span>Don't have an account? <a href="{{ path ('userfront')}}" onclick="register()">Sign Up</a></span>
+                <span>You want to register as a Fournisseur  <a href="{{ path ('app_vendeur_inscription1')}}" onclick="register()">Sign Up</a></span>
                 <header>Login</header>
             </div>
           {% if error %}
