--- a/templates/front2.html.twig
+++ b/templates/front2.html.twig
@@ -85,23 +85,17 @@
                 <!-- Sidebar navigation-->
                 <nav class="sidebar-nav">
                     <ul id="sidebarnav">
-                       
-                        <li class="nav-small-cap">--- MY ACCOUNT </li>
+                       {% block sidebar %}
+               
                         </li>
-                        <li> <a class="" href="{{ path ('profile')}}" aria-expanded="false"><i class="ti-user"></i><span class="hide-menu"> My Profile</span></a>
-
-                        <li> <a class="" href="{{ path('update2', {'id': user.idclient}) }}" aria-expanded="false"><i class="ti-settings"></i><span class="hide-menu"> update</span></a>
-                        <li> <a class="" href="{{ path ('logout')}}" aria-expanded="false"><i class="fa fa-power-off"></i><span class="hide-menu">  Logout</span></a>
-
-                       <li> <a class="" href="{{ path('app_update3', {'id': vendeur.idvendeur}) }}" aria-expanded="false"><i class="ti-settings"></i><span class="hide-menu"> update</span></a>
-          
-                        </li>
+                            {% endblock %}
                     </ul>
                 </nav>
                 <!-- End Sidebar navigation -->
             </div>
             <!-- End Sidebar scroll-->
         </aside>
+    
         <!-- ============================================================== -->
         <!-- End Left Sidebar - style you can find in sidebar.scss  -->
         <!-- ============================================================== -->
