--- a/templates/users/Profilefront.html.twig
+++ b/templates/users/Profilefront.html.twig
@@ -3,7 +3,16 @@
 {% block title %}
 TOUNSI LL TOUNSI    
 {% endblock %}
+{% block sidebar %}
+         <li class="nav-small-cap">--- MY ACCOUNT </li>
+                        </li>
+                        <li> <a class="" href="{{ path ('profile')}}" aria-expanded="false"><i class="ti-user"></i><span class="hide-menu"> My Profile</span></a>
 
+                        <li> <a class="" href="{{ path('update2', {'id': user.idclient}) }}" aria-expanded="false"><i class="ti-settings"></i><span class="hide-menu"> update</span></a>
+                        
+          <li> <a class="" href="{{ path ('logout')}}" aria-expanded="false"><i class="fa fa-power-off"></i><span class="hide-menu">  Logout</span></a>
+
+{% endblock %}
 {% block ktiba3 %}
 <!-- Row -->
 <div class="row justify-content-center">
