--- a/templates/vendeur/Profilfront.html.twig
+++ b/templates/vendeur/Profilfront.html.twig
@@ -43,7 +43,7 @@ TOUNSI LL TOUNSI
 {% block sidebar %}
 <li class="nav-small-cap">--- MY ACCOUNT </li>
                         </li>
-  <li> <a class="" href="{{ path ('profile')}}" aria-expanded="false"><i class="ti-user"></i><span class="hide-menu"> My Profile</span></a>
+  <li> <a class="" href="{{ path('app_profile')}}" aria-expanded="false"><i class="ti-user"></i><span class="hide-menu"> My Profile</span></a>
 
        <li> <a class="" href="{{ path('app_update3', {'id': vendeur.idvendeur}) }}" aria-expanded="false"><i class="ti-settings"></i><span class="hide-menu"> update</span></a>
           <li> <a class="" href="{{ path ('logout')}}" aria-expanded="false"><i class="fa fa-power-off"></i><span class="hide-menu">  Logout</span></a>
