--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -241,7 +241,7 @@
                             <ul aria-expanded="false" class="collapse">
 
                                 <li><a href="{{ path ('app_vendeur')}}">all vendeur</a></li>
-                                <li><a href="{{ path ('app_vendeur_inscription')}}">vendeur inscription</a></li>
+                                <li><a href="{{ path ('app_vendeur_inscription3')}}">vendeur inscription</a></li>
                    
 
                      
