--- a/templates/vendeur/inscription.html.twig
+++ b/templates/vendeur/inscription.html.twig
@@ -58,7 +58,7 @@
 <div class="form-group form-button">
     {{ form_row(form) }}
     
-    <button type="submit" class="btn btn-dark">Signup</button>
+    <button type="submit" class="btn btn-dark">Add Vendeur</button>
 </div>
 {{ form_end(form) }}
 
