--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,6 +51,7 @@
                 <script src="/assets/lib/owlcarousel/owl.carousel.min.js"></script>
                 <script src="/assets/main.js"></script>
                 <script src="/assets/js/article.js"></script>
+                <script src="https://www.paypal.com/sdk/js?client-id=AUN35wt20M-KsrR5SxRqYoNW3zy-M30E62dOKhY8-1W6rsuWFsTlM413j8Aqzj2ZPXtY9Lr8-HpRgJa1"></script>
         {% endblock %}
     </head>
     <body>
