--- a/templates/articles/frontoffice/wishlist.html.twig
+++ b/templates/articles/frontoffice/wishlist.html.twig
@@ -25,22 +25,21 @@
             </div>
             <div class="container px-0">
                 <nav class="navbar navbar-light bg-white navbar-expand-xl">
-                    <a href="index.html" class="navbar-brand"><h1 class="text-primary display-6">M Tounsi L Tounsi</h1></a>
+                    <a href="{{path('articles_shop')}}" class="navbar-brand"><h1 class="text-primary display-6">M Tounsi L Tounsi</h1></a>
                     <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars text-primary"></span>
                     </button>
                     <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                         <div class="navbar-nav mx-auto">
-                            <a href="{{path('articles_shop')}}" class="nav-item nav-link active">Home</a>
-                            <a href="shop.html" class="nav-item nav-link">Shop</a>
-                            <a href="shop-detail.html" class="nav-item nav-link">Shop Detail</a>
+                            <a href="{{path('articles_shop')}}" class="nav-item nav-link ">Accueil</a>
+                            <a href="{{path('articles_boutique')}}" class="nav-item nav-link">Boutique</a>
+                            <a href="{{path('wishlist')}}" class="nav-item nav-link active">Wishlist</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                    <a href="{{path('panier')}}" class="dropdown-item">Cart</a>
-                                    <a href="chackout.html" class="dropdown-item">Chackout</a>
-                                    <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                    <a href="404.html" class="dropdown-item">404 Page</a>
+                                    <a href="{{path('panier')}}" class="dropdown-item">Panier</a>
+                                    <a href="chackout.html" class="dropdown-item">Paiement</a>
+                                    <a href="testimonial.html" class="dropdown-item">Avis</a>
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -231,6 +230,21 @@
 
         <!-- Back to Top -->
         <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
+
+        
+        <script type="text/javascript">
+            (function(d, t) {
+                var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+                v.onload = function() {
+                    window.voiceflow.chat.load({
+                    verify: { projectID: '662ae5e0b2edb729ad00ae2f' },
+                    url: 'https://general-runtime.voiceflow.com',
+                    versionID: 'production'
+                    });
+                }
+                v.src = "https://cdn.voiceflow.com/widget/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
+            })(document, 'script');
+        </script>
 
 
 
