--- a/templates/vendeur/Profilfront.html.twig
+++ b/templates/vendeur/Profilfront.html.twig
@@ -65,10 +65,10 @@ TOUNSI LL TOUNSI
 </br></br></br>
 </br>
 
-      <center class="m-t-30"> <img src="{{ asset('uploads/' ~ vendeur.image) }}" class="img-circle" width="150" />
+<center class="m-t-30"><img src="{{ asset(image_path) }}" class="img-circle" width="150" />
+
                         
-                                
-                                </center>
+</center>
 <br>
    
      <h6 class="card-subtitle">Your Account :</h6>
