--- a/templates/vendeur/aff.html.twig
+++ b/templates/vendeur/aff.html.twig
@@ -15,7 +15,7 @@
             <div class="card-body" id="user-table">
                 <h4 class="card-title">Show Vendeurs</h4>
                 <div id="vendeur-list">
-                    {% include 'vendeur/vendeur_list.html.twig' with {'vendeurs': Vendeur} %}
+                    {% include 'vendeur/vendeur_list.html.twig' with {'VendeursData': VendeursData} %}
                 </div>
             </div>
         </div>
